# fastapi-scopes-example

./: .gitignore  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 42745496d524_update_users_добавил_поля_create_at_для_.py  6252710f52f3_update_users_добавил_новое_поле_is_.py  73ea1c883a81_create_permissions_users_permissions.py  b6bce5000a68_create_users.py  edb2b7b9eba0_update_users_добавил_новые_поля_is_.py
app/: main.py  pre_init.py
app/api/: deps.py
app/api/api_v1/: api.py
app/core/: common.py  settings.py  typings.py
app/core/db/: __init__.py  engine.py  modelbase.py  session.py
app/core/http/: exceptions.py
app/core/security/: permissions.py  scheme.py  security.py  utils.py
app/core/utils/: text.py
app/crud/exp/: sync.py
app/crud/repositories/: __init__.py  permissions_r.py  repository.py  users_r.py
app/crud/services/: __init__.py  permissions_s.py  service.py  users_s.py
app/models/: __init__.py  permission.py  user.py
app/schemas/: permission.py  user.py
configs/: example.env
docs/: Setup.md
docs/SDF/: Отдельные методы activate и deactivate.md  Проверка на обладание правами при связке пользователя с правами.md  Путь к пользователям через users.me.id.md  Репозитории и сервисы.md
docs/Конфигурации редакторов/: vscode.json
tests/: GLOSSARY.md  __init__.py  conftest.py  db.py
tests/integration/: client.py  utils.py
tests/integration/api/: test_auth.py  test_permissions.py  test_service.py  test_users.py
tests/integration/ext/: app.py  data.py  overrides.py
(+8 files in other folders)
