[tool.poetry]
name = "ha"
version = "0.1.0"
description = ""
authors = ["Evgeniy Gribanov <evgeniy.therabbit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.98.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydantic = {extras = ["dotenv"], version = "^1.10.9"}
sqlalchemy = "^2.0.16"
alembic = "^1.11.1"
argon2-cffi = "^21.3.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.0"
ruff = "^0.0.275"
black = "^23.3.0"
pytest = "^7.4.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
    "pydantic.mypy"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
